--- a/src/components/DasboardCards/DashBlogCard/DashBlogCard.css
+++ b/src/components/DasboardCards/DashBlogCard/DashBlogCard.css
@@ -29,6 +29,10 @@
   font-size: 20px;
   font-weight: 600;
   line-height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
 }
 
 .d-b-card-lower .description {
