--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -4,10 +4,25 @@
   justify-content: flex-end;
   height: 70px;
   user-select: none;
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  z-index: 10000;
+  box-shadow: 0px 2px 15px 6px rgba(58, 90, 64, 0.5);
 }
 
 a {
   text-decoration: none !important;
+}
+
+.nav-logo {
+  color: white !important;
+  margin-left: 40px;
+  font-size: 30px;
+  font-weight: 600;
+  cursor: pointer;
+  text-transform: uppercase;
 }
 
 .navbar-links {
@@ -91,6 +106,111 @@ a {
 
 .prof-btn-overlay .prof-btn-link:hover {
   background-color: rgba(88, 129, 87, 1);
+}
+
+.dropdown {
+  height: 100%;
+  padding: 20px 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  position: relative;
+  font-size: 20px;
+  font-weight: 500;
+  perspective: 1000px;
+  z-index: 100;
+}
+.dropdown:hover {
+  cursor: pointer;
+}
+.dropdown:hover .dropdown_menu li {
+  display: block;
+}
+
+.dropdown_menu {
+  position: absolute;
+  top: 100%;
+  left: -20%;
+  width: 120%;
+  perspective: 1000px;
+  z-index: -1;
+}
+
+.dropdown_menu li {
+  display: none;
+  color: white;
+  background-color: rgba(58, 90, 64, 1);
+  padding: 10px 20px;
+  font-size: 18px;
+  font-weight: 500;
+  opacity: 0;
+}
+
+.dropdown_menu li:hover {
+  background-color: rgba(88, 129, 87, 1);
+}
+
+.dropdown_menu .dropdown_item-1 {
+  transform-origin: top center;
+  animation: rotateX 300ms 50ms ease-in-out forwards;
+}
+.dropdown_menu .dropdown_item-2 {
+  transform-origin: top center;
+  animation: rotateX 300ms 100ms ease-in-out forwards;
+}
+
+@-moz-keyframes rotateX {
+  0% {
+    opacity: 0;
+    transform: rotateX(-90deg);
+  }
+  50% {
+    transform: rotateX(-20deg);
+  }
+  100% {
+    opacity: 1;
+    transform: rotateX(0deg);
+  }
+}
+@-webkit-keyframes rotateX {
+  0% {
+    opacity: 0;
+    transform: rotateX(-90deg);
+  }
+  50% {
+    transform: rotateX(-20deg);
+  }
+  100% {
+    opacity: 1;
+    transform: rotateX(0deg);
+  }
+}
+@-o-keyframes rotateX {
+  0% {
+    opacity: 0;
+    transform: rotateX(-90deg);
+  }
+  50% {
+    transform: rotateX(-20deg);
+  }
+  100% {
+    opacity: 1;
+    transform: rotateX(0deg);
+  }
+}
+@keyframes rotateX {
+  0% {
+    opacity: 0;
+    transform: rotateX(-90deg);
+  }
+  50% {
+    transform: rotateX(-20deg);
+  }
+  100% {
+    opacity: 1;
+    transform: rotateX(0deg);
+  }
 }
 
 @keyframes pulse {
