--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,9 @@
 /* .App {
   padding-top: 70px;
 } */
+
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+* {
+  font-family: "Outfit", sans-serif;
+}
