--- a/src/components/BlogCard/BlogCard.css
+++ b/src/components/BlogCard/BlogCard.css
@@ -1,32 +1,93 @@
 .blog-card-main {
-  background-color: white;
-  padding: 20px 30px;
-  border-radius: 20px 0;
+  border-radius: 16px;
+  width: 280px;
+  height: 360px;
+  border: 1px solid rgba(52, 78, 65, 1);
   position: relative;
-  padding-bottom: 70px;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+}
+
+.blog-card-img {
+  width: 280px;
+  height: 150px;
+  border-radius: 16px 16px 0 0;
+  object-fit: cover;
+}
+
+.blog-card-details {
+  height: 150px;
+}
+
+.blog-card-likes {
+  color: rgba(66, 60, 60, 1);
+}
+
+.blog-card-likes svg {
+  margin-right: 3px;
+}
+
+.blog-card-likes span {
+  margin-top: 1px;
 }
 
 .blog-card-title {
-  font-size: 40px;
-  font-weight: 500;
-  line-height: 40px;
-}
-
-.blog-card-domain {
-  font-size: 16px;
-  color: rgba(115, 105, 105, 1);
-}
-
-.blog-card-content {
-  margin-top: 10px;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 18px;
+  font-weight: 600;
+  text-align: center;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .blog-card-author {
-  font-size: 20px;
-  margin-top: 20px;
+  color: rgba(66, 60, 60, 1);
+  text-align: right;
+}
+
+.blog-card-desc {
+  line-height: 18px;
+  min-height: 60px;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.blog-card-date {
+  text-align: center;
+  color: rgba(66, 60, 60, 1);
+}
+
+.blog-card-more {
   position: absolute;
-  bottom: 20px;
-  left: 30px;
+  bottom: -20px;
+  right: -30px;
+  background-color: rgba(52, 78, 65, 1);
+  color: white;
+  cursor: pointer;
+  padding: 4px 16px;
+  border-radius: 6px;
+}
+
+.blog-search-cnt {
+  border: 1px solid black;
+  border-radius: 6px;
+  width: fit-content;
+  height: 40px;
+  padding: 10px 10px;
+}
+
+.blog-search-cnt input {
+  border: none;
+  width: 350px;
+  background-color: transparent;
+  outline: none;
+  box-shadow: none;
+}
+
+.blog-search-cnt img {
+  height: 15px;
+  margin-right: 10px;
 }
