--- a/src/pages/Private/Blogs/BlogsVew.css
+++ b/src/pages/Private/Blogs/BlogsVew.css
@@ -12,9 +12,9 @@
 
 .blogs-view-list {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-row-gap: 20px;
-  gap: 40px;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 50px;
+  grid-row-gap: 80px;
 }
 
 .blog-heading {
@@ -31,4 +31,35 @@
   margin-top: 5px;
   width: 70%;
   border-bottom: 4px solid rgba(88, 129, 87, 0.893);
+}
+
+.blogs-view .dropdown button {
+  width: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px 0 20px;
+  height: 40px;
+}
+
+.blogs-view .btn-primary {
+  background-color: transparent !important;
+  border-color: rgba(52, 78, 65, 1) !important;
+  color: black !important;
+  box-shadow: none !important;
+}
+
+.blogs-view .dropdown-menu-dark {
+  background-color: rgba(52, 78, 65, 1);
+  width: 248px;
+}
+
+.blogs-view .dropdown-item {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.blogs-view .dropdown-menu-dark .dropdown-item.active,
+.blogs-view .dropdown-menu-dark .dropdown-item:active {
+  background-color: rgba(88, 129, 87, 1);
 }
