--- a/src/pages/Private/Profile/Profile.css
+++ b/src/pages/Private/Profile/Profile.css
@@ -167,7 +167,25 @@
 }
 
 .accordion .accordion-body {
-  padding: 10px 20px;
+  padding: 20px 20px;
+  max-height: 300px;
+  overflow-y: auto;
+  scrollbar-width: thin;
+  scrollbar-color: rgba(88, 129, 87, 1) #9c9a94;
+}
+
+.accordion .accordion-body::-webkit-scrollbar {
+  width: 6px;
+}
+
+.accordion .accordion-body::-webkit-scrollbar-track {
+  background: #b3b0aa;
+}
+
+.accordion .accordion-body::-webkit-scrollbar-thumb {
+  background-color: rgba(88, 129, 87, 1);
+  border-radius: 0px;
+  border: 1px solid #ffffff8a;
 }
 
 .interest-box {
@@ -202,4 +220,42 @@
 .resume-button svg {
   margin-left: 8px;
   font-size: 22px;
+}
+
+.proj-title {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.proj-role {
+  font-size: 18px;
+  color: rgb(94, 81, 81);
+}
+
+.proj-date {
+  font-size: 14px;
+  color: rgb(94, 81, 81);
+}
+
+.proj-domain {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.proj-contribution {
+  width: 90%;
+  line-height: 110%;
+  margin: 5px 0;
+}
+
+.project {
+  background-color: rgba(218, 215, 205, 0.5);
+  padding: 15px;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.relevant-link .link-head{
+  font-size: 18px;
+  font-weight: 500;
 }
