--- a/src/components/DasboardCards/DashProfileCard/DashProfileCard.css
+++ b/src/components/DasboardCards/DashProfileCard/DashProfileCard.css
@@ -4,10 +4,11 @@
   margin-top: -1px;
   margin-left: -0.5%;
   border-radius: 15px;
+  color: black;
 }
 
 .d-p-card-upper {
-  height: 50%;
+  height: 48%;
   border-radius: 15px 15px 0 0 !important;
   border-radius: inherit;
   background-color: #3a5a40;
@@ -17,32 +18,34 @@
 .d-p-card-upper img {
   height: 110%;
   position: absolute;
+  aspect-ratio: 1/1;
   top: 20%;
   left: 50%;
   transform: translateX(-50%);
   border-radius: 50%;
-  border-inline: 2px solid;
+  border: 1px solid rgba(0, 0, 0, 0.4);
 }
 
 .d-p-card-lower {
-  margin-top: 22%;
+  margin-top: 20%;
 }
 
 .d-p-card-lower .name {
   font-size: 20px;
   font-weight: 600;
-  line-height: 140%;
+  line-height: 130%;
 }
 
 .d-p-card-lower .department {
   color: #736969;
   font-size: 16px;
   font-weight: 500;
-  line-height: 140%;
+  line-height: 110%;
 }
 
 .d-p-card-lower .batch {
   color: #736969;
   font-size: 14px;
   line-height: 100%;
+  margin-top: 2%;
 }
