--- a/src/components/AdminDashboard/AlumniVerification/AlumniVerification.css
+++ b/src/components/AdminDashboard/AlumniVerification/AlumniVerification.css
@@ -40,7 +40,7 @@
   margin-top: -5px;
 }
 
-.pending-card .approve-btn {
+.pending-card .approve-btn, .reject-overlay-cnt .approve-btn {
   color: white;
   border: 2px solid rgba(52, 78, 65, 1);
   border: none;
@@ -50,6 +50,14 @@
   font-size: 18px;
   font-weight: 500;
   cursor: pointer;
+  width: 120px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.pending-card .approve-btn.reject, .reject-overlay-cnt .approve-btn.reject {
+  margin-top: 10px;
+  background-color: rgb(182, 49, 49);
 }
 
 .p-field {
@@ -65,4 +73,46 @@
 .no-pending {
   font-size: 24px;
   font-weight: 400;
+}
+
+.reject-overlay {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.reject-overlay-cnt {
+  width: 50%;
+  background-color: rgba(163, 177, 138, 1);
+  border-radius: 20px;
+  padding: 20px 40px;
+}
+
+.reject-overlay-cnt textarea {
+  resize: none;
+  width: 90%;
+  outline: none;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.reject-overlay-head {
+  font-size: 26px;
+  font-weight: 500;
+}
+
+.reject-overlay .approve-btn {
+  margin-left: auto;
+}
+
+.close-btn {
+  cursor: pointer;
 }
