--- a/src/components/ProfilesViewCard/ProfilesViewCard.css
+++ b/src/components/ProfilesViewCard/ProfilesViewCard.css
@@ -1,12 +1,17 @@
 .profile-view-card-main {
   background-color: white;
-  padding: 20px 30px;
+  padding: 10px 30px;
   border-radius: 20px 0;
   position: relative;
+  color: black;
+  height: 160px;
 }
 
 .profile-view-card-main img {
   height: 120px;
+  width: 120px;
+  border-radius: 50%;
+  object-fit: fill;
 }
 
 .prof-view-card-inner {
@@ -17,22 +22,37 @@
   font-size: 25px;
   font-weight: 500;
   line-height: 34px;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .pv-c-dept {
   text-transform: uppercase;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
   color: rgba(115, 105, 105, 1);
+  line-height: 110%;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .pv-c-batch {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 10px;
+  margin-top: 10px;
   color: rgba(115, 105, 105, 1);
 }
 
 .pv-c-domain {
-	font-size: 14px;
-	margin-top: 6px;
+  font-size: 14px;
+  margin: 6px 0;
+  line-height: 110%;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
