--- a/src/pages/Public/Login/Login.css
+++ b/src/pages/Public/Login/Login.css
@@ -5,6 +5,7 @@
   background-position-y: -2px;
   min-height: 100vh;
   user-select: none;
+  position: relative;
 }
 
 .home-btn {
@@ -28,7 +29,7 @@
 
 .login-container {
   max-width: 400px;
-  width: 80%;/* makes it kinda responsive */
+  width: 80%; /* makes it kinda responsive */
 }
 
 .login-heading {
@@ -57,7 +58,7 @@
   height: 40px;
   width: 100%;
   border-radius: 10px;
-  background: rgba(0, 0, 0, 0.341)!important;
+  background: rgba(0, 0, 0, 0.341) !important;
   border: 1.1px solid #ffffff6e;
   color: white;
   margin: 10px 0;
@@ -156,7 +157,100 @@
 }
 
 .bottom-line a {
-  color: rgb(183, 183, 183)!important;
+  color: rgb(183, 183, 183) !important;
   font-weight: 600;
   text-decoration: none;
+}
+
+.forgot-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.85);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.forgot-overlay-cnt {
+  position: relative;
+  width: 40%;
+  max-height: 50%;
+  min-height: fit-content;
+  background-color: rgb(34, 55, 38);
+  border-radius: 20px;
+  padding: 40px 60px;
+}
+
+.forgot-overlay .overlay-close {
+  position: absolute;
+  right: 25px;
+  top: 25px;
+  font-size: 24px;
+  cursor: pointer;
+  color: white;
+}
+
+.forgot-overlay-head {
+  font-size: 28px;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-align: center;
+  color: rgb(233, 233, 233);
+  margin-bottom: 30px;
+}
+
+.forgot-overlay p {
+  font-size: 14px;
+  color: rgb(206, 206, 206);
+  font-weight: 500;
+  text-align: center;
+}
+
+.forgot-overlay .input-cnt input {
+  /* no need for new class when we can do this :) */
+  height: 40px;
+  width: 100%;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.6) !important;
+  border: 1.1px solid #ffffff6e;
+  color: white;
+  margin: 10px 0;
+  padding-left: 45px;
+  outline: none;
+}
+
+.forgot-overlay .input-cnt {
+  position: relative;
+  width: 70%;
+  margin: auto;
+}
+
+.forgot-overlay .icon-email-pswd {
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+}
+
+.forgot-overlay .input-cnt svg {
+  height: 18px;
+  width: 18px;
+}
+
+.forgot-overlay .forgot-btn {
+  background-color: rgba(163, 177, 138, 1);
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 6px;
+  text-align: center;
+  border-radius: 5px;
+  width: 50%;
+  margin: 20px auto;
+  cursor: pointer;
 }
