--- a/src/pages/Public/Login/Login.css
+++ b/src/pages/Public/Login/Login.css
@@ -1,5 +1,5 @@
 .login-main {
-  background-image: url("../../../assets/images/login-bck-img.png");
+  background-image: url("../../../assets/images/login-bck-img.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: -2px;
