--- a/src/pages/Private/ChangePassword/ChangePassowrd.css
+++ b/src/pages/Private/ChangePassword/ChangePassowrd.css
@@ -2,7 +2,7 @@
   min-height: calc(100vh - 70px);
   height: fit-content;
   background-color: rgba(0, 12, 2, 0.89);
-  background-image: url("../../../assets/images/login-bck-img.png");
+  background-image: url("../../../assets/images/login-bck-img.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: -2px;
