--- a/src/pages/Public/ResetPassword/ResetPassword.css
+++ b/src/pages/Public/ResetPassword/ResetPassword.css
@@ -1,5 +1,5 @@
 .resetPass-main {
-  background-image: url("../../../assets/images/login-bck-img.png");
+  background-image: url("../../../assets/images/login-bck-img.webp");
   background-size: cover;
   background-repeat: no-repeat;
   background-position-y: -2px;
@@ -9,7 +9,7 @@
 }
 
 .resetPass-main .login-container {
-	max-width: 500px;
+  max-width: 500px;
 }
 
 .resetPass-heading {
