:hammer: minor changes

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   background: rgb(27, 41, 34);
 }
 
+.App .Toastify__toast-container {
+  z-index: 10002
+}
+
 /* .App {
   padding-top: 70px;
 } */
