--- a/src/components/FileInput/FileInput.css
+++ b/src/components/FileInput/FileInput.css
@@ -63,3 +63,49 @@
   font-size: 28px;
   font-weight: bold;
 }
+
+.crop-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.455);
+  z-index: 10001;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.crop-cnt {
+  background-color: rgba(218, 215, 205, 1);
+  max-height: 70%;
+  max-width: 60%; 
+  min-height: 60%;
+  min-width: 50%; 
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.crop-head {
+  color: rgb(38, 59, 49);
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: calc(1rem + 0.8vw);
+  margin-bottom: 10px;
+}
+
+.crop-overlay .image-crop {
+  border-radius: 0;
+  height: fit-content;
+  width: fit-content;
+}
+
+.crop-cnt button {
+  margin-top: 15px;
+}
