--- a/src/components/AnimatedInputField/AnimatedInputField.css
+++ b/src/components/AnimatedInputField/AnimatedInputField.css
@@ -79,26 +79,6 @@
   border-radius: 50px;
 }
 
-.add-experience-button > div {
-  font-weight: 600;
-  background-color: rgba(58, 90, 64, 1);
-  height: 30px;
-  width: 30px;
-  border-radius: 15px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 30px;
-  color: white;
-  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.769);
-  cursor: pointer;
-}
-
-.add-experience-button {
-  color: rgba(88, 129, 87, 1);
-  font-weight: 500;
-}
-
 .animated-in input::-webkit-outer-spin-button,
 .animated-in input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -137,4 +117,13 @@
   background: transparent;
   border: 0px none #ffffff;
   border-radius: 50px;
+}
+
+@media (max-width: 768px) {
+  .animated-in-label,
+  .animated-in .animated-in-ip,
+  .animated-in-ip:focus ~ .animated-in-label,
+  .animate-input .animated-in-label {
+    font-size: 14px;
+  }
 }
